centered nav bar
finally fixed the nav bar issue

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -1,6 +1,5 @@
 <html>
-	<img id="bg_img" src="background3.png"/>
-
+	<img id="bg_img" src="background3.jpg"/>
 	<head>
 		<title>Dan Shen's Website</title>
 		<link type="text/css" rel="stylesheet" href="design.css">
@@ -11,17 +10,14 @@
 			<h1>Nice to meet you. </h1>
 			<h1>My name is Dan Shen, and welcome to my website! </h1>
 		</div>
-		<div id="header">
-			<div id="navbar">
-				<ul>
-					<li>Home</li>
-					<li>About Me</li>
-					<li>Resume</li>
-					<li>Projects</li>
-					<li>Contact</li>
-				</ul>
-			</div>
-			<h2>About Me</h2>
+		<div id="navbar">
+			<ul class="nav">
+				<li class="links"><a href="/">Home</a></li>
+				<li class="links"><a href="/about/">About</a></li>
+				<li class="links"><a href="/resume/">Resume</a></li>
+				<li class="links"><a href="/projects/">Projects</a></li>
+				<li class="links"><a href="/contact/">Contact</a></li>
+			</ul>
 		</div>
 	</body>
 </html>
