--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -1,8 +1,11 @@
 <html>
 	<img id="bg_img" src="background3.jpg"/>
 	<head>
+		<script type="text/javascript" src="jQuery.js"></script>
+		<script src="script.js"></script>
 		<title>Dan Shen's Website</title>
 		<link type="text/css" rel="stylesheet" href="design.css">
+
 	</head>
 	<body>
 		<div id="Greetings">
@@ -18,6 +21,9 @@
 				<li class="links"><a href="/projects/">Projects</a></li>
 				<li class="links"><a href="/contact/">Contact</a></li>
 			</ul>
+		</div>
+		<div id="block">
+			A Block
 		</div>
 	</body>
 </html>
