typing effect implemented
-need to fix nav bar hovering bug
-typing effect needs to go line by line, not all at once.
-try to implement styling text input caret for authentic scripting
effect.

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -8,10 +8,8 @@
 
 	</head>
 	<body>
-		<div id="Greetings">
-			<h1>Hi! </h1>
-			<h1>Nice to meet you. </h1>
-			<h1>My name is Dan Shen, and welcome to my website! </h1>
+		<div id="intro">
+			<h1 class="Greetings"> Hi! <br/> Nice to meet you. <br/> My name is Dan Shen, and welcome to my webpage!</h1>
 		</div>
 		<div id="navbar">
 			<ul class="nav">
@@ -21,9 +19,6 @@
 				<li class="links"><a href="/projects/">Projects</a></li>
 				<li class="links"><a href="/contact/">Contact</a></li>
 			</ul>
-		</div>
-		<div id="block">
-			A Block
 		</div>
 	</body>
 </html>
