implemented green typing caret
it blinks. but need it to follow text

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -9,6 +9,9 @@
 	</head>
 	<body>
 		<div id="intro">
+			<p class="console">
+				<span id="caret"><strong>|</strong></span>
+			</p>
 			<h1 class="Greetings"> Hi! <br/> Nice to meet you. <br/> My name is Dan Shen, and welcome to my webpage!</h1>
 		</div>
 		<div id="navbar">
