--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -10,7 +10,7 @@
 	<body>
 		<div id="intro">
 			<p class="console">
-				<span id="caret"><strong>|</strong></span>
+				<span id="caret" style="cursor:default"><strong>|</strong></span>
 			</p>
 			<h1 class="Greetings"> Hi! <br/> Nice to meet you. <br/> My name is Dan Shen, and welcome to my webpage!</h1>
 		</div>
