attempt at a new glowing fiberoptics background
^not working. gonna look at it later.
the auto-typing intro is now my about-me page.
-centered it.
-static now.
-types from left to right
~~~~~
issues: still need to get it to type line by line.
-have the cursor be at the end of where i'm typing

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -1,18 +1,18 @@
 <html>
-	<img id="bg_img" src="background3.jpg"/>
+	<!-- <img id="bg_img" src="carbon_fiber2.jpg"/> -->
 	<head>
 		<script type="text/javascript" src="jQuery.js"></script>
 		<script src="script.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 		<title>Dan Shen's Website</title>
-		<link type="text/css" rel="stylesheet" href="design.css">
+		<link type="text/css" rel="stylesheet" href="design.css" media="screen">
 
 	</head>
 	<body>
+		<div id="background"> </div>
 		<div id="intro">
-			<p class="console">
-				<span id="caret" style="cursor:default"><strong>|</strong></span>
-			</p>
-			<h1 class="Greetings"> Hi! <br/> Nice to meet you. <br/> My name is Dan Shen, and welcome to my webpage!</h1>
+			<h1 id="Greetings"> Hi! <br/> Nice to meet you. <br/> My name is Dan Shen, and welcome to my webpage!</h1>
+			<span id="caret" style="cursor:default">|</span>
 		</div>
 		<div id="navbar">
 			<ul class="nav">
