Solved tremendous lag issue when loading the page
-took out an unused library.

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -3,7 +3,7 @@
 	<head>
 		<script type="text/javascript" src="jQuery.js"></script>
 		<script src="script.js"></script>
-		<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+		<!--<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>--> <!--THIS SLOWS IT DOWN TREMENDOUSLY-->
 		<title>Dan Shen's Website</title>
 		<link type="text/css" rel="stylesheet" href="design.css" media="screen">
 		<script src="fiberopticsBackground.js"></script>
