New navigation bar
matches with theme of glowing fluorescent blue.
~~~~~~~~~~
*Issues:
text in nav bar is not fitting inside. have to readjust the size later?
--Maybe replace the text with symbolic icons instead.

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -50,15 +50,17 @@
 			<span id="caret" style="cursor:default">|</span>
 		</div> -->
 		<div id="name">
-			<center> Dan Shen </center>
+			<center id="landing">
+				Dan Shen
+			</center>
 		</div>
 		<div id="navbar">
 			<ul class="nav">
-				<li class="links"><a href="/">Home</a></li>
-				<li class="links"><a href="/about/">About</a></li>
-				<li class="links"><a href="/resume/">Resume</a></li>
-				<li class="links"><a href="/projects/">Projects</a></li>
-				<li class="links"><a href="/contact/">Contact</a></li>
+				<li class="pulsor"><a href="/">Home</a></li>
+				<li class="pulsor"><a href="/about/">About</a></li>
+				<li class="pulsor"><a href="/resume/">Resume</a></li>
+				<li class="pulsor"><a href="/projects/">Projects</a></li>
+				<li class="pulsor"><a href="/contact/">Contact</a></li>
 			</ul>
 		</div>
 	</body>
