fixed fading on hover effect by switching it to css code
-need it to terminate to end of cycle
-border of pages expand at will due to background
-need to minimalize range of effectiveness on hover for landing
-need to enlarge range of effectiveness on hover for nav bar

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -17,6 +17,15 @@
 	</head>
 	<body>
 		<div id="background"> </div>
+		<div id="navbar">
+			<ul class="nav">
+				<li class="pulsor" class="pulsor-text"><a href="#">Home</a></li>
+				<li class="pulsor" class="pulsor-text"><a href="#About">About</a></li>
+				<li class="pulsor" class="pulsor-text"><a href="/resume/">Resume</a></li>
+				<li class="pulsor" class="pulsor-text"><a href="/projects/">Projects</a></li>
+				<li class="pulsor" class="pulsor-text"><a href="/contact/">Contact</a></li>
+			</ul>
+		</div>
 		<div id="leftRays">
 			<img id="ray1Img" src="ray_a1.png">
 			<img id="ray2Img" src="ray_a2.png">
@@ -53,14 +62,14 @@
 				Dan Shen
 			</center>
 		</div>
-		<div id="navbar">
-			<ul class="nav">
-				<li class="pulsor"><a href="/">Home</a></li>
-				<li class="pulsor"><a href="/about/">About</a></li>
-				<li class="pulsor"><a href="/resume/">Resume</a></li>
-				<li class="pulsor"><a href="/projects/">Projects</a></li>
-				<li class="pulsor"><a href="/contact/">Contact</a></li>
-			</ul>
+		<div>
+			<a NAME="About"></a>
+			<center class="title">
+				Who am I?
+			</center>
+			<center class="circular_frame">
+				<img class="promote" src="me.jpg"/>
+			</center>
 		</div>
 	</body>
 </html>
