Added info about myself

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -80,6 +80,33 @@
 						<img src="question_mark.png">
 					</center>
 				</div> -->
+				<div>
+					<ul class="bio">
+						<li class="bio">Hi my name is Daniel Shen. I am a third year computer science major at Georgia Institute of Technology. I specialize in Artificial Intelligence and Information Internetworks. </li>
+						<ul class="bio"> Coding Languages:
+							<li>Java</li>
+							<li>SQL/MySQL</li>
+							<li>HTML/CSS</li>
+							<li>Javascript/JQuery</li>
+							<li>BootStrap</li>
+							<li>AngularJS</li>
+							<li>Python</li>
+							<li>C</li>
+							<li>Android</li>
+							<li>Assembly</li>
+						</ul>
+						<ul class="bio"> Projects:
+							<li></li>
+						</ul>
+						<ul class="bio"> Prior Working Experience:
+							<li></li>
+						</ul>
+						<ul class="bio"> Contact Me:
+							<li>Linkedin</li>
+							<li>Email</li>s
+						</ul>
+					</ul>
+				</div>
 			</center>
 		</div>
 	</body>
