--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -1,13 +1,14 @@
 <html>
 	<head>
 		<script type="text/javascript" src="jQuery.js"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">	
 		<script src="script.js"></script>
 		<title>Dan Shen's Website</title>
 		<link type="text/css" rel="stylesheet" href="design.css" media="screen">
 		<link rel="stylesheet" type="text/css" href="font-awesome.min.css">
 		<script src="fiberopticsBackground.js"></script>
 		<link rel="stylesheet" type="text/css" href="jquery-ui.css">
-		<script src="jquery-ui.js"></script>
+		<!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
 		<script>
 			$(function(){
 				$("#rightRays img").MyLiveWallpaper({direction:1});
@@ -18,6 +19,8 @@
 		</script>
 	</head>
 	<body>
+		<script src="jquery-ui.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 		<div id="background"> </div>
 		<div id="navbar">
 			<ul class="nav">
@@ -69,10 +72,10 @@
 			<center class="about">
 				Who am I?
 			</center> 
-			<center style="position:relative;" >
-				<div class= "promote">
+			<div style="position:relative;" >
+				<div class= "promote" style="margin:auto">
 					<center class="circular_frame" >
-						<img src="me.jpg"/>
+						<img class="img-responsive" src="me.jpg"/>
 					</center>
 				</div>
 <!-- 				<div style="position:absolute" class="who">
@@ -80,34 +83,34 @@
 						<img src="question_mark.png">
 					</center>
 				</div> -->
-				<div>
-					<ul class="bio">
-						<li class="bio">Hi my name is Daniel Shen. I am a third year computer science major at Georgia Institute of Technology. I specialize in Artificial Intelligence and Information Internetworks. </li>
-						<ul class="bio"> Coding Languages:
-							<li>Java</li>
-							<li>SQL/MySQL</li>
-							<li>HTML/CSS</li>
-							<li>Javascript/JQuery</li>
-							<li>BootStrap</li>
-							<li>AngularJS</li>
-							<li>Python</li>
-							<li>C</li>
-							<li>Android</li>
-							<li>Assembly</li>
-						</ul>
-						<ul class="bio"> Projects:
-							<li></li>
-						</ul>
-						<ul class="bio"> Prior Working Experience:
-							<li></li>
-						</ul>
-						<ul class="bio"> Contact Me:
-							<li>Linkedin</li>
-							<li>Email</li>s
-						</ul>
+			</div>
+			<div id="info">
+				<ul>
+					<li class="bio">Hi my name is Daniel Shen. I am a third year computer science major at Georgia Institute of Technology. I specialize in Artificial Intelligence and Information Internetworks. </li>
+					<ul class="bio"> Coding Languages:
+						<li>Java</li>
+						<li>SQL/MySQL</li>
+						<li>HTML/CSS</li>
+						<li>Javascript/JQuery</li>
+						<li>BootStrap</li>
+						<li>AngularJS</li>
+						<li>Python</li>
+						<li>C</li>
+						<li>Android</li>
+						<li>Assembly</li>
 					</ul>
-				</div>
-			</center>
+					<ul class="bio"> Projects:
+						<li></li>
+					</ul>
+					<ul class="bio"> Prior Working Experience:
+						<li></li>
+					</ul>
+					<ul class="bio"> Contact Me:
+						<li>Linkedin</li>
+						<li>Email</li>s
+					</ul>
+				</ul>
+			</div>
 		</div>
 	</body>
 </html>
