might abandon the slide in text
because 2 relative panels are not able to overlap each other, one of
them must be absolute but that causes formatting issues. So we'll see

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -67,12 +67,12 @@
 				Dan Shen
 			</center>
 		</div>
-		<div >
+		<div style="position:relative;">
 			<a NAME="About"></a>
 			<center class="about">
 				Who am I?
 			</center> 
-			<div style="position:relative;" >
+			<div style="position:relative; max-width:300px; margin:auto;" >
 				<div class= "promote" style="margin:auto">
 					<center class="circular_frame" >
 						<img class="img-responsive" src="me.jpg"/>
@@ -84,8 +84,8 @@
 					</center>
 				</div> -->
 			</div>
-			<div id="info">
-				<ul>
+			<div  style="position:absolute; margin-top: -300px; z-index:-1;">
+				<ul id="info">
 					<li class="bio">Hi my name is Daniel Shen. I am a third year computer science major at Georgia Institute of Technology. I specialize in Artificial Intelligence and Information Internetworks. </li>
 					<ul class="bio"> Coding Languages:
 						<li>Java</li>
