fixed moving pages
-pages won't shift content anymore
-text now fades in when clicks on pic
-need to implement font awesome

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -9,6 +9,7 @@
 		<script src="fiberopticsBackground.js"></script>
 		<link rel="stylesheet" type="text/css" href="jquery-ui.css">
 		<!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
+        <!-- <style type="text/css">body { background: black; }</style> -->
 		<script>
 			$(function(){
 				$("#rightRays img").MyLiveWallpaper({direction:1});
@@ -71,6 +72,7 @@
 			<a NAME="About"></a>
 			<center class="about">
 				Who am I?
+				<i class="fa fa-facebook-square">Assembly </i>
 			</center> 
 			<div style="position:relative; max-width:300px; margin:auto;" >
 				<div class= "promote" style="margin:auto">
@@ -86,9 +88,15 @@
 			</div>
 			<div  style="position:absolute; margin-top: -300px; z-index:-1;">
 				<ul id="info">
-					<li class="bio">Hi my name is Daniel Shen. I am a third year computer science major at Georgia Institute of Technology. I specialize in Artificial Intelligence and Information Internetworks. </li>
+					<li class="bio">Hi my name is Daniel Shen. I am a third year computer science major at Georgia Institute of Technology. I specialize in Artificial Intelligence and Information Internetworks. I'm also the president of the badminton team at Georgia Tech
+					</li>
+					<ul class="bio"> Hobbies and Passions:
+						<li>Badminton</li>
+						<li>Running</li>
+						<li>Finding new Songs </li>
+					</ul>
 					<ul class="bio"> Coding Languages:
-						<li>Java</li>
+						<li>Java </li>
 						<li>SQL/MySQL</li>
 						<li>HTML/CSS</li>
 						<li>Javascript/JQuery</li>
@@ -97,7 +105,7 @@
 						<li>Python</li>
 						<li>C</li>
 						<li>Android</li>
-						<li>Assembly</li>
+						
 					</ul>
 					<ul class="bio"> Projects:
 						<li></li>
@@ -107,7 +115,7 @@
 					</ul>
 					<ul class="bio"> Contact Me:
 						<li>Linkedin</li>
-						<li>Email</li>s
+						<li>Email</li>
 					</ul>
 				</ul>
 			</div>
