formatted layout of about me
tried to implement font-awesome icons as navbar icons. It has some bugs-
caused the circular encapsulation to shift away such that the text/icon
is now not centered vertically.

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -5,7 +5,7 @@
 		<script src="script.js"></script>
 		<title>Dan Shen's Website</title>
 		<link type="text/css" rel="stylesheet" href="design.css" media="screen">
-		<link rel="stylesheet" type="text/css" href="font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="fontAwesome/css/font-awesome.min.css">
 		<script src="fiberopticsBackground.js"></script>
 		<link rel="stylesheet" type="text/css" href="jquery-ui.css">
 		<!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
@@ -25,7 +25,7 @@
 		<div id="background"> </div>
 		<div id="navbar">
 			<ul class="nav">
-				<li class="pulsor" class="pulsor-text"><a href="#">Home</a></li>
+				<li class="pulsor" class="pulsor-text"><a href="#"><i class="fa fa-home fa-2x"></i></a></li> <!--Home-->
 				<li class="pulsor" class="pulsor-text"><a href="#About">About</a></li>
 				<li class="pulsor" class="pulsor-text"><a href="/resume/">Resume</a></li>
 				<li class="pulsor" class="pulsor-text"><a href="/projects/">Projects</a></li>
@@ -72,7 +72,7 @@
 			<a NAME="About"></a>
 			<center class="about">
 				Who am I?
-				<i class="fa fa-facebook-square">Assembly </i>
+				
 			</center> 
 			<div style="position:relative; max-width:300px; margin:auto;" >
 				<div class= "promote" style="margin:auto">
@@ -93,7 +93,8 @@
 					<ul class="bio"> Hobbies and Passions:
 						<li>Badminton</li>
 						<li>Running</li>
-						<li>Finding new Songs </li>
+						<li>Finding New Songs</li>
+						<li>Eating</li>
 					</ul>
 					<ul class="bio"> Coding Languages:
 						<li>Java </li>
@@ -105,17 +106,11 @@
 						<li>Python</li>
 						<li>C</li>
 						<li>Android</li>
-						
-					</ul>
-					<ul class="bio"> Projects:
-						<li></li>
+						<li>Assembly</li>
 					</ul>
 					<ul class="bio"> Prior Working Experience:
-						<li></li>
-					</ul>
-					<ul class="bio"> Contact Me:
-						<li>Linkedin</li>
-						<li>Email</li>
+						<li>Private Competition and SAT Math Tutor</li>
+						<li>Big Data Software Developer Intern</li>
 					</ul>
 				</ul>
 			</div>
