Done 'About Me' Section
added a fade out question-mark make over my picture to make it more
obvious for the user to click on it

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -77,8 +77,12 @@
 			<div style="position:relative; max-width:300px; margin:auto;" >
 				<div class= "promote" style="margin:auto">
 					<center class="circular_frame" >
-						<img class="img-responsive" src="me.jpg"/>
+						<img style="position:absolute; height:361px; width:361px; left:-43px;top:-43px" class="who" src="question_mark.png" />
+						<img src="me.jpg"/>
 					</center>
+					<!-- <center class="circular_frame" style="position:absolute" >
+						
+					</center> -->
 				</div>
 <!-- 				<div style="position:absolute" class="who">
 					<center class="circular_frame" id="vanish" > 
@@ -88,15 +92,15 @@
 			</div>
 			<div  style="position:absolute; margin-top: -300px; z-index:-1;">
 				<ul id="info">
-					<li class="bio">Hi my name is Daniel Shen. I am a third year computer science major at Georgia Institute of Technology. I specialize in Artificial Intelligence and Information Internetworks. I'm also the president of the badminton team at Georgia Tech
+					<li class="bio">My name is Daniel Shen. I am a third year computer science major at Georgia Institute of Technology. I specialize in Artificial Intelligence and Information Internetworks. I'm also the president of the badminton team at Georgia Tech.
 					</li>
-					<ul class="bio"> Hobbies and Passions:
+					<ul class="bio"><Strong><u>Hobbies and Passions:</u></Strong>
 						<li>Badminton</li>
 						<li>Running</li>
 						<li>Finding New Songs</li>
 						<li>Eating</li>
 					</ul>
-					<ul class="bio"> Coding Languages:
+					<ul class="bio"> <Strong><u>Coding Languages:</u></Strong>
 						<li>Java </li>
 						<li>SQL/MySQL</li>
 						<li>HTML/CSS</li>
@@ -108,9 +112,9 @@
 						<li>Android</li>
 						<li>Assembly</li>
 					</ul>
-					<ul class="bio"> Prior Working Experience:
+					<ul class="bio"> <Strong><u>Prior Working Experience:</u></Strong>
 						<li>Private Competition and SAT Math Tutor</li>
-						<li>Big Data Software Developer Intern</li>
+						<li>Big Data Software Developer Intern at Comcast</li>
 					</ul>
 				</ul>
 			</div>
