updated about me

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -27,7 +27,7 @@
 			<ul class="nav">
 				<li class="pulsor" class="pulsor-text"><a href="#"><i class="fa fa-home fa-2x"></i></a></li> <!--Home-->
 				<li class="pulsor" class="pulsor-text"><a href="#About">About</a></li>
-				<li class="pulsor" class="pulsor-text"><a href="/resume/">Resume</a></li>
+				<li class="pulsor" class="pulsor-text"><a href="#Resume">Resume</a></li>
 				<li class="pulsor" class="pulsor-text"><a href="/projects/">Projects</a></li>
 				<li class="pulsor" class="pulsor-text"><a href="/contact/">Contact</a></li>
 			</ul>
@@ -59,20 +59,15 @@
 			<img id="ray11Img" src="ray_d3.png">
 			<img id="ray12Img" src="ray_d4.png">
 		</div>
-<!-- 		<div id="intro">
-			<h1 id="Greetings"> Hi! <br/> Nice to meet you. <br/> My name is Dan Shen, and welcome to my webpage!</h1>
-			<span id="caret" style="cursor:default">|</span>
-		</div> -->
 		<div id="name">
 			<center id="landing">
 				Dan Shen
 			</center>
 		</div>
-		<div style="position:relative;">
+		<div style="position:relative; margin-bottom:6em;">
 			<a NAME="About"></a>
 			<center class="about">
 				Who am I?
-				
 			</center> 
 			<div style="position:relative; max-width:300px; margin:auto;" >
 				<div class= "promote" style="margin:auto">
@@ -80,15 +75,15 @@
 						<img style="position:absolute; height:361px; width:361px; left:-43px;top:-43px" class="who" src="question_mark.png" />
 						<img src="me.jpg"/>
 					</center>
-					<!-- <center class="circular_frame" style="position:absolute" >
-						
-					</center> -->
 				</div>
-<!-- 				<div style="position:absolute" class="who">
-					<center class="circular_frame" id="vanish" > 
-						<img src="question_mark.png">
-					</center>
-				</div> -->
+				<center >
+					<p class="quote">
+						<i>"Skills win you medals, but attitude wins hearts." <br/> </i>
+					</p>
+					<p class="quote" style="right:0; padding-top:5px">
+						-ESPN Caster of Lee Chong Wei
+					</p>
+				</center>
 			</div>
 			<div  style="position:absolute; margin-top: -300px; z-index:-1;">
 				<ul id="info">
@@ -118,6 +113,12 @@
 					</ul>
 				</ul>
 			</div>
+		</div>
+		<div style="position:relative; margin-bottom:6em;">
+			<a NAME="Resume"></a>
+			<center class="about">
+				Resume
+			</center> 
 		</div>
 	</body>
 </html>
