FINALLY VERTICALLY ALIGNED FONT AWESOME ICON IN NAV BAR
i have too many gray hairs from this

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -25,7 +25,7 @@
 		<div id="background"> </div>
 		<div id="navbar">
 			<ul class="nav">
-				<li class="pulsor" class="pulsor-text"><a href="#"><i class="fa fa-home fa-2x"></i></a></li> <!--Home-->
+				<li class="pulsor" class="pulsor-text"><a href="#"><span class="fa fa-home fa-2x" style=" vertical-align:middle"></span></a></li> <!--Home-->
 				<li class="pulsor" class="pulsor-text"><a href="#About">About</a></li>
 				<li class="pulsor" class="pulsor-text"><a href="#Resume">Resume</a></li>
 				<li class="pulsor" class="pulsor-text"><a href="/projects/">Projects</a></li>
