finishing up contacts animations

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -25,11 +25,11 @@
 		<div id="background"> </div>
 		<div id="navbar">
 			<ul class="nav">
-				<li class="pulsor" class="pulsor-text"><a href="#"><span class="fa fa-home fa-2x" style=" vertical-align:middle"></span></a></li> <!--Home-->
-				<li class="pulsor" class="pulsor-text"><a href="#About">About</a></li>
-				<li class="pulsor" class="pulsor-text"><a href="#Resume">Resume</a></li>
-				<li class="pulsor" class="pulsor-text"><a href="/projects/">Projects</a></li>
-				<li class="pulsor" class="pulsor-text"><a href="/contact/">Contact</a></li>
+				<li class="pulsor" class="pulsor-text" id="home" title="Home Page"><a href="#"><span class="fa fa-home fa-2x" style=" vertical-align:middle"></span></a></li>
+				<li class="pulsor" class="pulsor-text" id="about" title="About Me"><a href="#About"><span class="fa fa-question fa-3x" style=" vertical-align:middle"></span></a></li>
+				<li class="pulsor" class="pulsor-text" id="resume" title="Resume"><a href="#Resume"><span class="fa fa-file-text fa-2x" style=" vertical-align:middle"></span></a></li>
+				<li class="pulsor" class="pulsor-text" id="projects" title="Coding Projects"><a href="#Projects"><span class="fa fa-file-code-o fa-2x" style=" vertical-align:middle"></span></a></li>
+				<li class="pulsor" class="pulsor-text" id="contact" title="Contact Information"><a href="#Contact"><span class="fa fa-envelope fa-2x" style=" vertical-align:middle"></span></a></li>
 			</ul>
 		</div>
 		<div id="leftRays">
@@ -63,7 +63,21 @@
 			<center id="landing">
 				Dan Shen
 			</center>
+			<ul class="contentDisappear">
+				<li class="displayContact"><a href="https://www.linkedin.com/in/danshen"><span class="fa fa-linkedin-square fa-2x" style=" vertical-align:middle"></span></a></li>
+				<li class="displayContact"><a href="mailto:dshen36@gatech.edu"><span class="fa fa-envelope fa-2x" style=" vertical-align:middle"></span></a></li>
+			</ul>
+			<ul class="contentDisappear">
+				<li class="content">LinkedIn.com/in/danshen </li>
+				<li class="content">dshen36@gatech.edu</li>
+			</ul>
 		</div>
+<!-- 		<div >
+			<ul id="displayContact">
+				<li>LinkedIn</li>
+				<li>Email</li>
+			</ul>
+		</div> -->
 		<div style="position:relative; margin-bottom:6em;">
 			<a NAME="About"></a>
 			<center class="about">
@@ -81,7 +95,7 @@
 						<i>"Skills win you medals, but attitude wins hearts." <br/> </i>
 					</p>
 					<p class="quote" style="right:0; padding-top:5px">
-						-ESPN Caster of Lee Chong Wei
+						-ESPN Caster towards Lee Chong Wei
 					</p>
 				</center>
 			</div>
@@ -120,5 +134,17 @@
 				Resume
 			</center> 
 		</div>
+		<div style="position:relative; margin-bottom:6em;">
+			<a NAME="Projects"></a>
+			<center class="about">
+				Coding Projects
+			</center> 
+		</div>
+<!-- 		<div style="position:relative; margin-bottom:6em;">
+			<a NAME="Contact"></a>
+			<center class="about">
+				Contact Information
+			</center> 
+		</div> -->
 	</body>
 </html>
