fade back in works
no revival of hyperlink though

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -29,7 +29,7 @@
 				<li class="pulsor" class="pulsor-text" id="about" title="About Me"><a href="#About"><span class="fa fa-question fa-3x" style=" vertical-align:middle"></span></a></li>
 				<li class="pulsor" class="pulsor-text" id="resume" title="Resume"><a href="#Resume"><span class="fa fa-file-text fa-2x" style=" vertical-align:middle"></span></a></li>
 				<li class="pulsor" class="pulsor-text" id="projects" title="Coding Projects"><a href="#Projects"><span class="fa fa-file-code-o fa-2x" style=" vertical-align:middle"></span></a></li>
-				<li class="pulsor" class="pulsor-text" id="contact" title="Contact Information"><a href="#Contact"><span class="fa fa-envelope fa-2x" style=" vertical-align:middle"></span></a></li>
+				<li class="pulsor" class="pulsor-text" id="contact" title="Contact Information"><a href="#"><span class="fa fa-envelope fa-2x" style=" vertical-align:middle"></span></a></li>
 			</ul>
 		</div>
 		<div id="leftRays">
@@ -63,11 +63,11 @@
 			<center id="landing">
 				Dan Shen
 			</center>
-			<ul class="contentDisappear">
+			<ul class="contentDisappear" class="magic">
 				<li class="displayContact"><a href="https://www.linkedin.com/in/danshen"><span class="fa fa-linkedin-square fa-2x" style=" vertical-align:middle"></span></a></li>
 				<li class="displayContact"><a href="mailto:dshen36@gatech.edu"><span class="fa fa-envelope fa-2x" style=" vertical-align:middle"></span></a></li>
 			</ul>
-			<ul class="contentDisappear">
+			<ul class="contentDisappear" class="magic">
 				<li class="content">LinkedIn.com/in/danshen </li>
 				<li class="content">dshen36@gatech.edu</li>
 			</ul>
