worked on resume and projects

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -133,12 +133,20 @@
 			<center class="about">
 				Resume
 			</center> 
+			<a id="download" href="resume.pdf" download> Download </a>
 		</div>
 		<div style="position:relative; margin-bottom:6em;">
-			<a NAME="Projects"></a>
-			<center class="about">
+			<a id="github" NAME="Projects"></a>
+			<center id="github" class="about">
 				Coding Projects
-			</center> 
+			</center>
+			<ul class="projName"><center>
+				<ul class="proj"><Strong><u>Library Database</u></ul>
+				<ul class="proj"><Strong><u>Space-Invaders</u></ul>
+				<ul class="proj"><Strong><u>Shopping with Friends</u></ul>
+				<ul class="proj"><Strong><u>Ideas Portal App</u></ul>
+				<ul class="proj"><Strong><u>Comcast Dashboard</u></ul>
+			</center></ul>
 		</div>
 <!-- 		<div style="position:relative; margin-bottom:6em;">
 			<a NAME="Contact"></a>
