finalized download button
also was able to center it

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -133,7 +133,8 @@
 			<center class="about">
 				Resume
 			</center> 
-			<a id="download" href="resume.pdf" download> Download </a>
+			<a id="dlDesign" href="resume.pdf" download><span class="fa fa-angle-double-down fa-2x" style=" vertical-align:middle"></span> | Download</a>
+			<!-- id="download" -->
 		</div>
 		<div style="position:relative; margin-bottom:6em;">
 			<a id="github" NAME="Projects"></a>
