added a preview of my resume

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -133,7 +133,8 @@
 			<center class="about">
 				Resume
 			</center> 
-			<a id="dlDesign" href="resume.pdf" download><span class="fa fa-angle-double-down fa-2x" style=" vertical-align:middle"></span> | Download</a>
+			<center><img id="img" src="resume.png"></center>
+			<a id="dlDesign" href="resume.pdf" class="pulsor" download><span class="fa fa-angle-double-down fa-2x" style=" vertical-align:middle"></span> | Download</a>
 			<!-- id="download" -->
 		</div>
 		<div style="position:relative; margin-bottom:6em;">
