started outline of projects
gonna finish on main laptop

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -23,15 +23,6 @@
 		<script src="jquery-ui.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<div id="background"> </div>
-		<div id="navbar">
-			<ul class="nav">
-				<li class="pulsor" class="pulsor-text" id="home" title="Home Page"><a href="#"><span class="fa fa-home fa-2x" style=" vertical-align:middle"></span></a></li>
-				<li class="pulsor" class="pulsor-text" id="about" title="About Me"><a href="#About"><span class="fa fa-question fa-3x" style=" vertical-align:middle"></span></a></li>
-				<li class="pulsor" class="pulsor-text" id="resume" title="Resume"><a href="#Resume"><span class="fa fa-file-text fa-2x" style=" vertical-align:middle"></span></a></li>
-				<li class="pulsor" class="pulsor-text" id="projects" title="Coding Projects"><a href="#Projects"><span class="fa fa-file-code-o fa-2x" style=" vertical-align:middle"></span></a></li>
-				<li class="pulsor" class="pulsor-text" id="contact" title="Contact Information"><a href="#"><span class="fa fa-envelope fa-2x" style=" vertical-align:middle"></span></a></li>
-			</ul>
-		</div>
 		<div id="leftRays">
 			<img id="ray1Img" src="ray_a1.png">
 			<img id="ray2Img" src="ray_a2.png">
@@ -59,97 +50,111 @@
 			<img id="ray11Img" src="ray_d3.png">
 			<img id="ray12Img" src="ray_d4.png">
 		</div>
-		<div id="name">
-			<center id="landing">
-				Dan Shen
-			</center>
-			<ul class="contentDisappear" class="magic">
-				<li class="displayContact"><a href="https://www.linkedin.com/in/danshen"><span class="fa fa-linkedin-square fa-2x" style=" vertical-align:middle"></span></a></li>
-				<li class="displayContact"><a href="mailto:dshen36@gatech.edu"><span class="fa fa-envelope fa-2x" style=" vertical-align:middle"></span></a></li>
-			</ul>
-			<ul class="contentDisappear" class="magic">
-				<li class="content">LinkedIn.com/in/danshen </li>
-				<li class="content">dshen36@gatech.edu</li>
-			</ul>
-		</div>
-<!-- 		<div >
-			<ul id="displayContact">
-				<li>LinkedIn</li>
-				<li>Email</li>
-			</ul>
-		</div> -->
-		<div style="position:relative; margin-bottom:6em;">
-			<a NAME="About"></a>
-			<center class="about">
-				Who am I?
-			</center> 
-			<div style="position:relative; max-width:300px; margin:auto;" >
-				<div class= "promote" style="margin:auto">
-					<center class="circular_frame" >
-						<img style="position:absolute; height:361px; width:361px; left:-43px;top:-43px" class="who" src="question_mark.png" />
-						<img src="me.jpg"/>
-					</center>
-				</div>
-				<center >
-					<p class="quote">
-						<i>"Skills win you medals, but attitude wins hearts." <br/> </i>
-					</p>
-					<p class="quote" style="right:0; padding-top:5px">
-						-ESPN Caster towards Lee Chong Wei
-					</p>
-				</center>
-			</div>
-			<div  style="position:absolute; margin-top: -300px; z-index:-1;">
-				<ul id="info">
-					<li class="bio">My name is Daniel Shen. I am a third year computer science major at Georgia Institute of Technology. I specialize in Artificial Intelligence and Information Internetworks. I'm also the president of the badminton team at Georgia Tech.
-					</li>
-					<ul class="bio"><Strong><u>Hobbies and Passions:</u></Strong>
-						<li>Badminton</li>
-						<li>Running</li>
-						<li>Finding New Songs</li>
-						<li>Eating</li>
-					</ul>
-					<ul class="bio"> <Strong><u>Coding Languages:</u></Strong>
-						<li>Java </li>
-						<li>SQL/MySQL</li>
-						<li>HTML/CSS</li>
-						<li>Javascript/JQuery</li>
-						<li>BootStrap</li>
-						<li>AngularJS</li>
-						<li>Python</li>
-						<li>C</li>
-						<li>Android</li>
-						<li>Assembly</li>
-					</ul>
-					<ul class="bio"> <Strong><u>Prior Working Experience:</u></Strong>
-						<li>Private Competition and SAT Math Tutor</li>
-						<li>Big Data Software Developer Intern at Comcast</li>
-					</ul>
+		<div id="fixedDown">
+			<div id="navbar">
+				<ul class="nav">
+					<li class="pulsor" class="pulsor-text" id="home" title="Home Page"><a href="#"><span class="fa fa-home fa-2x" style=" vertical-align:middle"></span></a></li>
+					<li class="pulsor" class="pulsor-text" id="about" title="About Me"><a href="#About"><span class="fa fa-question fa-3x" style=" vertical-align:middle"></span></a></li>
+					<li class="pulsor" class="pulsor-text" id="resume" title="Resume"><a href="#Resume"><span class="fa fa-file-text fa-2x" style=" vertical-align:middle"></span></a></li>
+					<li class="pulsor" class="pulsor-text" id="projects" title="Coding Projects"><a href="#Projects"><span class="fa fa-file-code-o fa-2x" style=" vertical-align:middle"></span></a></li>
+					<li class="pulsor" class="pulsor-text" id="contact" title="Contact Information"><a href="#"><span class="fa fa-envelope fa-2x" style=" vertical-align:middle"></span></a></li>
 				</ul>
 			</div>
+			<div id="name">
+				<center id="landing">
+					Dan Shen
+				</center>
+				<ul class="contentDisappear" class="magic">
+					<li class="displayContact"><a href="https://www.linkedin.com/in/danshen"><span class="fa fa-linkedin-square fa-2x" style=" vertical-align:middle"></span></a></li>
+					<li class="displayContact"><a href="mailto:dshen36@gatech.edu"><span class="fa fa-envelope fa-2x" style=" vertical-align:middle"></span></a></li>
+				</ul>
+				<ul class="contentDisappear" class="magic">
+					<li class="content">LinkedIn.com/in/danshen </li>
+					<li class="content">dshen36@gatech.edu</li>
+				</ul>
+			</div>
+	<!-- 		<div >
+				<ul id="displayContact">
+					<li>LinkedIn</li>
+					<li>Email</li>
+				</ul>
+			</div> -->
+			<div style="position:relative; margin-bottom:6em;">
+				<a NAME="About"></a>
+				<center class="about">
+					Who am I?
+				</center> 
+				<div style="position:relative; max-width:300px; margin:auto;" >
+					<div class= "promote" style="margin:auto">
+						<center class="circular_frame" >
+							<img style="position:absolute; height:361px; width:361px; left:-43px;top:-43px" class="who" src="question_mark.png" />
+							<img src="me.jpg"/>
+						</center>
+					</div>
+					<center >
+						<p class="quote">
+							<i>"Skills win you medals, but attitude wins hearts." <br/> </i>
+						</p>
+						<p class="quote" style="right:0; padding-top:5px">
+							-ESPN Caster towards Lee Chong Wei
+						</p>
+					</center>
+				</div>
+				<div  style="position:absolute; margin-top: -300px; z-index:-1;">
+					<ul id="info">
+						<li class="bio">My name is Daniel Shen. I am a third year computer science major at Georgia Institute of Technology. I specialize in Artificial Intelligence and Information Internetworks. I'm also the president of the badminton team at Georgia Tech.
+						</li>
+						<ul class="bio"><Strong><u>Hobbies and Passions:</u></Strong>
+							<li>Badminton</li>
+							<li>Running</li>
+							<li>Finding New Songs</li>
+							<li>Eating</li>
+						</ul>
+						<ul class="bio"> <Strong><u>Coding Languages:</u></Strong>
+							<li>Java </li>
+							<li>SQL/MySQL</li>
+							<li>HTML/CSS</li>
+							<li>Javascript/JQuery</li>
+							<li>BootStrap</li>
+							<li>AngularJS</li>
+							<li>Python</li>
+							<li>C</li>
+							<li>Android</li>
+							<li>Assembly</li>
+						</ul>
+						<ul class="bio"> <Strong><u>Prior Working Experience:</u></Strong>
+							<li>Private Competition and SAT Math Tutor</li>
+							<li>Big Data Software Developer Intern at Comcast</li>
+						</ul>
+					</ul>
+				</div>
+			</div>
+			<div style="position:relative; margin-bottom:6em;">
+				<a NAME="Resume"></a>
+				<center class="about">
+					Resume
+				</center> 
+				<center><img id="img" src="resume.png"></center>
+				<a id="dlDesign" href="resume.pdf" class="pulsor" download><span class="fa fa-angle-double-down fa-2x" style=" vertical-align:middle"></span> | Download</a>
+				<!-- id="download" -->
+			</div>
+			<div style="position:relative; margin-bottom:6em;">
+				<a id="github" NAME="Projects"></a>
+				<center id="github" class="about">
+					Coding Projects
+				</center>
+				<ul class="projName"><center>
+					<ul class="proj"><Strong><u>Library Database</u>
+						<li>An intro to databases project that was meant to simulate the creation of a database in a team-based environment. This program mimicked the typical functionalities available when checking and returning a book, processing fines and holds, and generating reports.</li>
+					</ul>
+					<ul class="proj"><Strong><u>Space-Invaders</u></ul>
+					<ul class="proj"><Strong><u>Shopping with Friends</u></ul>
+					<ul class="proj"><Strong><u>Ideas Portal App</u></ul>
+					<ul class="proj"><Strong><u>Comcast Dashboard</u></ul>
+				</center></ul>
+			</div>
 		</div>
-		<div style="position:relative; margin-bottom:6em;">
-			<a NAME="Resume"></a>
-			<center class="about">
-				Resume
-			</center> 
-			<center><img id="img" src="resume.png"></center>
-			<a id="dlDesign" href="resume.pdf" class="pulsor" download><span class="fa fa-angle-double-down fa-2x" style=" vertical-align:middle"></span> | Download</a>
-			<!-- id="download" -->
-		</div>
-		<div style="position:relative; margin-bottom:6em;">
-			<a id="github" NAME="Projects"></a>
-			<center id="github" class="about">
-				Coding Projects
-			</center>
-			<ul class="projName"><center>
-				<ul class="proj"><Strong><u>Library Database</u></ul>
-				<ul class="proj"><Strong><u>Space-Invaders</u></ul>
-				<ul class="proj"><Strong><u>Shopping with Friends</u></ul>
-				<ul class="proj"><Strong><u>Ideas Portal App</u></ul>
-				<ul class="proj"><Strong><u>Comcast Dashboard</u></ul>
-			</center></ul>
-		</div>
+
 <!-- 		<div style="position:relative; margin-bottom:6em;">
 			<a NAME="Contact"></a>
 			<center class="about">
